@@ -1,8 +1,10 @@
 T3CH Upgrader Changelog:
 ========================
 v1.6.2 07/07/08
+  Changed: Language subfolder names (Capitalised)
+  Changed: Renamed textbox xml file and associated logo to more generic filenames.
+  Updated: Language strings.
   New: Vision2 skin added (thanks smuto)
-  Updated: Swedish strings.
   New: Menu option "Download: <build_name>" now also prompts for 'Download Only' or 'Download and Install'.
 v1.6.1 19/05/08
   Change: Checks (and creates) settings unrar path exists. (eg. E:\apps)
